Made version 1.0. All work correct